# wgkey

./: Cargo.toml  README.md
src/: cli.rs  curve25519.rs  genkey.rs  main.rs  pubkey.rs
