[package]
name = "wgkey"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.58.1"

[dependencies]
anyhow = "1.0"
rand = "0.8"
x25519-dalek = "1.2"

[dependencies.base64ct]
version = "1.1"
features = [
    "std",
]

[dependencies.clap]
version = "3.2"
features = [
    "cargo",
    "wrap_help",
]
